# AST5110

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  _config.yml  _toc.yml  ex_1a_v0.5.ipynb  ex_1b_ext.ipynb  ex_1b_v1.5.ipynb  ex_2a_analytical.ipynb  ex_2b.ipynb  ex_3a.ipynb  ex_4a.ipynb  ex_4b.ipynb  ex_4c.ipynb  ex_5a.ipynb  ex_6a.ipynb  genindex.html  index.html  nm_lib.py  nm_lib_setup.cfg  objects.inv  project.ipynb  project_2021.ipynb  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: devcontainer.json
AST5110.wiki/: Crank-Nicolson-in-Multidimensions.html  Discretization.html  Errors.html  Examples-of-hyperbolic-numerical-schemes-book.html  Home.html  Hyper-diffusive.html  Implicit-methods.html  Introduction-to-PDEs-and-classifications.html  Newton-Raphson-method.html  Operator-splitting.html  Self-similar-solution-for-parabolic-eq.html  Stability.html  Staggered-mesh.html  Super-time-stepping.html
nm_lib/: .gitignore  .pre-commit-config.yaml  __init__.py  nm_lib.py
notebooks/: ex_1.html  ex_1.ipynb  ex_1_ext.html  ex_1_ext.ipynb  ex_1a_v0.5.ipynb  ex_1b_ext.ipynb  ex_1b_v1.5.ipynb  ex_2a_analytical.html  ex_2b.html  ex_2b.ipynb  ex_2c_MHD.ipynb  ex_3.html  ex_3.ipynb  ex_4.html  ex_4.ipynb  ex_4b.ipynb  ex_4c.ipynb  ex_5.html  ex_5.ipynb  ex_6.html  ex_6.ipynb  ex_7.html  ex_7.ipynb  project.html  project.ipynb  project_2021.ipynb
notebooks_answers/: ex_1_answers.ipynb  ex_2a_answers.ipynb  ex_2b_answers.ipynb  ex_3_answers.ipynb  ex_4_answers.ipynb  ex_4b_answers.ipynb  (+2 more)
(+21 files in other folders)
