[metadata]
name = nm_lib
provides = nm_lib
version = 0.1.0
description = A library for the mumerical method course
long_description = file: README.md
long_description_content_type = text/x-rst
author = Juan Martinez-Sykora
author_email = martinezsykora@baeri.org
license = BSD 2-Clause
license_file = LICENSE
url = https://github.com/jumasy/AST5110
platform = any
keywords = solar physics, numerical methods
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Numerical methods

[options]
zip_safe = True
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
  numpy>=1.21.6
  scipy>=1.7.3

[pycodestyle]
max_line_length = 120

[flake8]
max-line-length = 120

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = nm_lib
length_sort = False
length_sort_sections = stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
